# old-librg

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CODESTYLE.md  README.md  changelog.md  install.sh  newbase.files  newbase.includes  test.txt  win32-build-fixlist.txt
build-lin/resources/default/: meta.xml
build-mac/resources/resource-default/: index.nut  meta.xml
client-test/: main.cpp
include/Game/Objects/: Entity.h
include/Resource/: Manager.h
include/librg/: Core.h  callbacks.h  core.h  entities.h  events.h  librg.h  linmath.h  network.h  resources.h  server.h  stdinc.h  streamer.h
include/librg/Entity/: Manager.h
include/librg/Event/: Manager.h
include/librg/Game/: Handler.h  Manager.h  World.h
include/librg/Game/Objects/: Entity.h  Vehicle.h
include/librg/Network/: Client.h  Handler.h  Manager.h
include/librg/Network/Handler/: Connection.h
include/librg/Resource/: Manager.h  Resource.h
include/librg/Scripting/: Index.hpp  Registry.hpp
include/librg/Scripting/Natives/: Entity.hpp  Event.hpp  Resource.hpp  System.hpp  Timer.hpp
include/librg/Shared/: BuildVersion.h
include/librg/components/: client.h  interpolable.h  server_owned.h  streamable.h  transform.h
include/librg/core/: Core.h  client.h  constants.h  contants.h  other.h  server.h  shared.h
include/librg/events/: default.h
include/librg/http/: client.h
include/librg/network/: bitstream.h  connection.hpp  controllers.h
include/librg/network/client/: connection.h  connection.hpp  streaming.h  streaming.hpp
include/librg/network/http/: client.h
include/librg/network/server/: connection.h  connection.hpp  streaming.hpp
include/librg/scripting/: registry.hpp  scripting.hpp
include/librg/scripting/natives/: entity.hpp  event.hpp  streamer.hpp  timer.hpp  transform.hpp
include/librg/utils/: aabb.h  fs.h  http.h  linmath.h  uri.h
librg/: Core.cpp  server.cpp  server.h  sketches.txt  stdinc.h
librg/Event/: Manager.cpp  Manager.h
librg/Game/: Base.cpp  Manager.h
librg/Network/: Handler.h  Manager.cpp  Manager.h
librg/Network/Handler/: Connection.cpp
librg/Resource/: Manager.cpp  Resource.cpp  Resource.h
librg/Scripting/: Registry.hpp
librg/Scripting/Natives/: Event.hpp  Resource.hpp  System.hpp  Timer.hpp
resources/resource-default/: index.nut  meta.xml
resources/resource-default/other/another/: index.nut
server/: Core.cpp  Core.h  Singleton.h  Utils.h  main.cpp  server  stdinc.h
server/Event/: Manager.cpp  Manager.h
server/Game/: Base.cpp  Entity.h  Handler.h  Manager.h  Player.h  Vehicle.h
server/Game/Objects/: Entity.h  Player.h
server/Network/: Client.cpp  Client.h  Handler.h  Manager.cpp  Manager.h
server/Network/Handler/: Base.cpp  Connection.cpp
server/Resource/: Manager.cpp  Manager.h  Resource.cpp  Resource.h
server/Scripting/: Event.hpp  Index.hpp  Registry.hpp  Resource.hpp  System.hpp  Timer.hpp  Wrapper.cpp
server/Scripting/Natives/: Event.hpp
server/Scripting/Resource/: Manager.h
server/Utils/: Filesystem.cpp  Filesystem.h
shared/: BuildVersion.h  MessageID.h  MessageIDs.h  Singleton.h  Utils.h
sketches/: oldstuff.txt
src/: Core.cpp  network.cpp  server.cpp
src/Entity/: Manager.cpp
src/Event/: Manager.cpp
src/Game/: Base.cpp
src/Game/Objects/: Player.cpp
src/Network/: Client.cpp  Manager.cpp
src/Network/Handler/: Base.cpp  Connection.cpp
src/Resource/: Manager.cpp  Resource.cpp
src/Utils/: Filesystem.cpp
src/callbacks/: set.cpp  trigger.cpp
src/core/: client.cpp  initialize.cpp  logger.cpp  mode.cpp  server.cpp  shared.cpp  start.cpp  terminate.cpp
src/entities/: callbacks.cpp  initialize.cpp  interpolate.cpp  terminate.cpp
src/events/: add.cpp  initialize.cpp  remove.cpp  set.cpp  terminate.cpp  trigger.cpp
src/http/: add_header.cpp  create.cpp  send.cpp  set_data.cpp
src/network/: add.cpp  base.cpp  client.cpp  connection.cpp  initialize.cpp  interpolate.cpp  message.cpp  messages.cpp  msg.cpp  poll.cpp  receive.cpp  server.cpp  set_sync_cb.cpp  start.cpp  terminate.cpp  update.cpp
src/network/client/: connection.cpp  streaming.cpp
src/network/controllers/: connection.cpp  entity.cpp
src/network/http/: add_header.cpp  create.cpp  send.cpp  set_data.cpp
src/network/server/: connection.cpp
src/resources/: initialize.cpp  start.cpp  stop.cpp  terminate.cpp
src/streamer/: build.cpp  callbacks.cpp  clean.cpp  clear.cpp  client.cpp  create_child.cpp  initialize.cpp  insert.cpp  query.cpp  remove.cpp  set_visible.cpp  subdivide.cpp  terminate.cpp  update.cpp
src/utils/: fs.cpp  http-client.cpp  http-server.cpp  http.cpp  math.cpp
test/: events.hpp  main.cpp  streamer.hpp  test.cpp  test.hpp
test/perf/: events.hpp  streamer.hpp  tests.hpp
test/unit/: events.hpp  streamer.hpp  tests.hpp
test/unit/utils/: aabb.hpp  fs.hpp
test/utils/: aabb.hpp  fs.hpp
